[package]
name = "sim_block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = "0.10.1"
tokio = { version = "1.35.0", features = ["sync", "rt", "time"] }
rayon = "1.8.0"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[features]
default = ["full"]
full = ["source", "sink", "continuous", "vector", "matrix", "discontinuous"]
vector = []
matrix = ["vector"]
source = []
sink = []
continuous = []
discontinuous = []
